Fixed table text alignment #3

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,7 @@ table.pmcPanel {
     padding: 5px;
     font-size: 16px;
 
-    p {
+    p.description {
       text-align: left;
     }
 
